# HwVideoDec_nvidia

./: CMakeLists.txt  README.md
include/: decodeUtils.h  utils.hpp  videoDec.hpp
lib/: libvideodecoder.so.1  libvideodecoder.so.1.0
src/: main.cpp
